# junction-budapest-2023

./: .gitignore  Makefile  README.md  docker-compose.yml
audio-fake-detection/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
audio-fake-detection/models/: image.py
deepfake-detect/: Dockerfile  app.py  pyproject.toml
frontend/: index.html  script.js  styles.css
lips-movement-detection/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
nginx/: nginx.conf
one-person-detect/: Dockerfile  main.py  pyproject.toml  requirements.txt
one-person-detect/test/: main.py
open-closed-eye-detect/: Dockerfile  app.py  pyproject.toml
orchestrator/: Dockerfile  go.mod  go.sum
orchestrator/cmd/: main.go
orchestrator/internal/api/: router.go  status.go  upload.go
orchestrator/internal/domain/: video.go
orchestrator/internal/integrations/models/: audio_fake_detection.go  client.go  deepfake_detect.go  lips_movement.go  one_person_detect.go  open-closed-eyes.go  wishper_large_v3.go
orchestrator/internal/integrations/redis/: client.go
orchestrator/internal/interfaces/: model_client.go  queue.go  task_storage.go  video_storage.go
orchestrator/internal/queue/: queue_local_path.go
orchestrator/internal/storage/tasks_storage/: add_or_update_task.go  get_task.go  storage.go
orchestrator/internal/storage/video_temp_storage/: cleanup.go  storage.go
orchestrator/internal/usecase/: add_task.go  get_task_status.go
orchestrator/internal/worker/: worker.go
whisper-large-v3/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
