[tool.poetry]
name = "audio-fake-detection"
version = "0.1.0"
description = ""
authors = ["Roma <monobearotaku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.1.1"
numpy = "1.23.3"
timm = "0.9.12"
uvicorn = "0.24.0.post1"
fastapi = "0.104.1"
python-multipart = "0.0.6"
torchaudio = "2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
