[tool.poetry]
name = "one-person-detect"
version = "0.1.0"
description = ""
authors = ["Roma <monobearotaku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.1.1,<2.2.0"
fastapi = ">=0.104.1,<0.110.0"
opencv-python = ">=4.7.0.72,<4.8.0.0"
ultralyticsplus = ">=0.0.28,<0.1.0"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
