[tool.poetry]
name = "open-closed-eye-detection"
version = "0.1.0"
description = ""
authors = ["Roma <monobearotaku@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
opencv-contrib-python = "^4.8.1.78"
gradio = "^4.7.1"
tensorflow = "^2.15.0"
imutils = "^0.5.4"
pathlib = "^1.0.1"
pillow = "^10.1.0"
opencv-python-headless = "^4.8.1.78"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
