[tool.poetry]
name = "whisper-large-v3"
version = "0.1.0"
description = ""
authors = ["Roma <monobearotaku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "4.35.2"
torch = "2.1.1"
uvicorn = "0.24.0.post1"
fastapi = "0.104.1"
python-multipart = "0.0.6"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
